src/test/ui/codemap_tests/coherence-overlapping-inherent-impl-trait.stderr
error[E0592]: duplicate definitions with name `f`
  --> $DIR/coherence-overlapping-inherent-impl-trait.rs:14:10
   |
LL | impl C { fn f() {} } //~ ERROR duplicate
   |          ^^^^^^^^^ duplicate definitions for `f`
LL | impl C { fn f() {} }
   |          --------- other definition for `f`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0592"
